# bevy_puppeteer

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  flake.nix  test_level.blend  test_level.blend1
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4swhz5c9230aifi07qzn5k13j91jj91a-source
assets/: test_level.gltf
examples/: showcase.rs
examples/showcase/: main.rs  map.rs
src/: lib.rs  puppet.rs  puppet_rig.rs  puppeteer.rs
src/offline/: current
src/offline/release-a02fd79-15275213327/: categories  keywords
