[package]
name = "puppeteer"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
avian3d = "0.3"
bevy = { version = "0.16", default-features = false }

[dev-dependencies]
bevy = { version = "0.16", features = ["wayland"] }
bevy-inspector-egui = "0.31"

[profile.dev.package."*"]
opt-level = 3
