[package]
name = "puppeteer"
version = "0.1.0"
edition = "2024"
resolver = "2"

[dependencies]
avian3d = "0.4"
bevy = { version = "0.17", default-features = false }

[dev-dependencies]
bevy = { version = "0.17", features = ["wayland"] }
bevy-inspector-egui = "0.34.0"
rand = "0.9.2"

[profile.dev.package."*"]
opt-level = 3
